--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@handwritten/handwritten",
+  "name": "handwritten.js",
   "version": "1.0.1",
   "description": "Convert text to handwritten!",
   "main": "src/index.js",
