--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "homepage": "https://github.com/alias-rahil/handwritten#readme",
   "dependencies": {
-    "merge-img": "^2.1.3"
+    "merge-img": "^2.1.3",
+    "unidecode-plus": "^1.0.2"
   },
   "bin": {
     "handwritten": "src/bin.js"
