--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   },
   "homepage": "https://github.com/alias-rahil/handwritten#readme",
   "dependencies": {
-    "merge-img": "^2.1.3",
-    "unidecode-plus": "^1.0.2"
+    "merge-img": "^2.1.3"
   },
   "bin": {
     "handwritten.js": "src/bin.js"
@@ -27,15 +26,12 @@
     "converter"
   ],
   "scripts": {
-    "releasepatch": "npm i && eslint src/bin.js src/index.js test/test.js --fix && mocha && git add . && git commit -m 'update' && npm version patch && git push && npm publish",
-    "releaseminor": "npm i && eslint src/bin.js src/index.js test/test.js --fix && mocha && git add . && git commit -m 'update' && npm version minor && git push && npm publish",
-    "releasemajor": "npm i && eslint src/bin.js src/index.js test/test.js --fix && mocha && git add . && git commit -m 'update' && npm version major && git push && npm publish"
+    "releasepatch": "npm i && eslint src/bin.js src/index.js --fix && git add . && git commit -m 'update' && npm version patch && git push && npm publish",
+    "releaseminor": "npm i && eslint src/bin.js src/index.js --fix && git add . && git commit -m 'update' && npm version minor && git push && npm publish",
+    "releasemajor": "npm i && eslint src/bin.js src/index.js --fix && git add . && git commit -m 'update' && npm version major && git push && npm publish"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
     "eslint": "^7.0.0",
-    "mocha": "^7.1.2",
-    "shelljs": "^0.8.4",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2"
   }
