--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "handwriting",
     "converter",
     "handwriter",
-    "font",
-    "daniel"
+    "extended mnist dataset",
+    "daniel",
+    "font"
   ],
   "scripts": {
     "releasepatch": "npm i && eslint src/bin.js src/index.js --fix && git add . && git commit -m 'update' && npm version patch && git push && npm publish",
