--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "handwriter",
     "extended mnist dataset",
     "daniel",
-    "font"
+    "font",
+    "pencil",
+    "pen"
   ],
   "scripts": {
     "releasepatch": "npm i && eslint src/bin.js src/index.js --fix && git add . && git commit -m 'update' && npm version patch && git push && npm publish",
