--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "handwriting",
     "converter",
     "handwriter",
-    "extended mnist dataset",
-    "daniel",
-    "font",
+    "emnist-dataset",
+    "daniel-font",
+    "pen",
     "pencil",
-    "pen"
+    "extended-mnist"
   ],
   "scripts": {
     "releasepatch": "npm i && eslint src/bin.js src/index.js --fix && git add . && git commit -m 'update' && npm version patch && git push && npm publish",
