--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "homepage": "https://github.com/alias-rahil/handwritten#readme",
   "dependencies": {
-    "merge-img": "^2.1.3"
+    "merge-img": "^2.1.3",
+    "unidecode-plus": "^1.0.2"
   },
   "bin": {
     "handwritten.js": "src/bin.js"
@@ -32,13 +33,8 @@
     "extended-mnist"
   ],
   "scripts": {
-    "releasepatch": "npm i && eslint src/bin.js src/index.js --fix && git add . && git commit -m 'update' && npm version patch && git push && npm publish",
-    "releaseminor": "npm i && eslint src/bin.js src/index.js --fix && git add . && git commit -m 'update' && npm version minor && git push && npm publish",
-    "releasemajor": "npm i && eslint src/bin.js src/index.js --fix && git add . && git commit -m 'update' && npm version major && git push && npm publish"
-  },
-  "devDependencies": {
-    "eslint": "^7.0.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.2"
+    "releasepatch": "npm i && git add . && git commit -m 'update' && npm version patch && git push && npm publish",
+    "releaseminor": "npm i && git add . && git commit -m 'update' && npm version minor && git push && npm publish",
+    "releasemajor": "npm i && git add . && git commit -m 'update' && npm version major && git push && npm publish"
   }
 }
