--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "homepage": "https://github.com/alias-rahil/handwritten#readme",
   "dependencies": {
+    "jimp": "^0.16.0",
     "merge-img": "^2.1.3",
     "unidecode-plus": "^1.0.2"
   },
