--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "jimp": "^0.16.0",
     "merge-img": "^2.1.3",
+    "pdfkit": "^0.11.0",
     "unidecode-plus": "^1.0.2"
   },
   "bin": {
