--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "extended-mnist"
   ],
   "scripts": {
-    "releasepatch": "npm i && git add . && git commit -m 'update' && npm version patch && git push && npm publish",
-    "releaseminor": "npm i && git add . && git commit -m 'update' && npm version minor && git push && npm publish",
-    "releasemajor": "npm i && git add . && git commit -m 'update' && npm version major && git push && npm publish"
+    "releasepatch": "git add . && git commit -m 'update' && npm version patch && git push && npm publish",
+    "releaseminor": "git add . && git commit -m 'update' && npm version minor && git push && npm publish",
+    "releasemajor": "git add . && git commit -m 'update' && npm version major && git push && npm publish"
   }
 }
