--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
    "homepage": "https://github.com/alias-rahil/handwritten#readme",
    "dependencies": {
       "commander": "^6.0.0",
-      "merge-img": "^2.1.3",
+      "jimp": "^0.16.1",
       "pdfkit": "^0.11.0",
       "unidecode-plus": "^1.0.2"
    },
