--- a/package.json
+++ b/package.json
@@ -45,8 +45,11 @@
    "devDependencies": {
       "babel-minify": "^0.5.1",
       "browserify": "^16.5.2",
-      "eslint": "^7.7.0",
-      "eslint-config-airbnb-base": "^14.2.0",
-      "eslint-plugin-import": "^2.22.0"
+      "eslint": "^7.10.0",
+      "eslint-config-standard": "^14.1.1",
+      "eslint-plugin-import": "^2.22.1",
+      "eslint-plugin-node": "^11.1.0",
+      "eslint-plugin-promise": "^4.2.1",
+      "eslint-plugin-standard": "^4.0.1"
    }
 }
