svg data, draw svg on the pdf

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
    },
    "homepage": "https://github.com/alias-rahil/handwritten#readme",
    "dependencies": {
+      "svg-parser": "^2.0.4",
       "commander": "^6.0.0",
       "del": "^6.0.0",
       "jimp": "^0.16.1",
@@ -43,6 +44,7 @@
       "extended-mnist"
    ],
    "devDependencies": {
+      "svg-parser": "^2.0.4",
       "babel-minify": "^0.5.1",
       "browserify": "^16.5.2",
       "eslint": "^7.10.0",
