docs: readme styling

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
       {
          "email": "bjunya@gmail.com",
          "name": "Ben Junya",
-         "url": "modernjsbyexample.net"
+         "url": "https://www.modernjsbyexample.net/"
       },
       {
          "email": "hs2002singhal@gmail.com",
