--- a/package.json
+++ b/package.json
@@ -55,6 +55,11 @@
     "test": "mocha",
     "lint:fix": "eslint \"src/**/*.{ts,js,jsx}\" --fix"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint:fix"
+    }
+  },
   "main": "src/index.js",
   "keywords": [
     "handwritten",
@@ -76,6 +81,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "husky": "^7.0.1"
   }
 }
