--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jimp": "^0.16.1",
     "mocha": "^9.1.0",
     "pdfkit": "^0.11.0",
+    "replace-color": "^2.3.0",
     "unidecode-plus": "^1.0.2"
   },
   "bin": {
