fix(import): fixed duplicate import, added Joi validation

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "commander": "^6.0.0",
     "del": "^6.0.0",
     "jimp": "^0.16.1",
+    "joi": "^17.4.2",
     "mocha": "^9.1.0",
     "pdfkit": "^0.11.0",
     "unidecode-plus": "^1.0.2"
