--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "handwritten.js",
-  "version": "18.10.2",
+  "version": "18.11.0",
   "description": "Convert typed text to realistic handwriting!",
   "repository": {
     "type": "git",
@@ -30,6 +30,11 @@
     {
       "name": "etienne",
       "url": "https://github.com/etnnth"
+    },
+    {
+      "name": "Suyash Sonawane",
+      "email": "suyashsonawane007@gmail.com",
+      "url": "https://suyashsonawane.me"
     }
   ],
   "license": "MIT",
@@ -38,9 +43,11 @@
   },
   "homepage": "https://github.com/alias-rahil/handwritten#readme",
   "dependencies": {
+    "@jimp/plugin-color": "^0.16.1",
     "commander": "^6.0.0",
     "del": "^6.0.0",
     "jimp": "^0.16.1",
+    "joi": "^17.4.2",
     "mocha": "^9.1.0",
     "pdfkit": "^0.11.0",
     "unidecode-plus": "^1.0.2"
@@ -49,7 +56,7 @@
     "handwritten.js": "src/bin.js"
   },
   "scripts": {
-    "build": "npm i && eslint . --fix && browserify -e src/index.js -s handwritten -o docs/handwritten.js && minify docs/handwritten.js -o docs/handwritten.js && git add . && (git commit -m 'fix lint errors + bump docs/handwritten.js' || :)",
+    "build": "npm i && eslint . --fix && browserify -e src/index.js -s handwritten -o docs/handwritten.js && minify docs/handwritten.js -o docs/handwritten.js",
     "minor": "npm run build && npm version minor && npm run release",
     "release": "git push && npm publish",
     "test": "mocha",
