--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,3 +1,4 @@
+
 {
   "files": [
     "README.md"
@@ -60,7 +61,7 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/58368421?v=4",
       "profile": "https://github.com/ashikka",
       "contributions": [
-        "maintenance"
+        "maintenance",
         "code"
       ]
     },
@@ -70,7 +71,7 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/35629339?v=4",
       "profile": "https://suyashsonawane.me",
       "contributions": [
-        "doc"
+        "doc",
         "code"
       ]
     }
