--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "minor": "npm run build && npm version minor && npm run release",
     "release": "git push && npm publish",
     "test": "mocha",
-    "lint": "eslint \"src/**/*.{ts,js,jsx}\" ",
+    "lint": "eslint .",
     "prepare": "husky install"
   },
   "main": "src/index.js",
@@ -82,11 +82,9 @@
     "babel-minify": "^0.5.1",
     "browserify": "^16.5.2",
     "eslint": "^7.10.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.1"
   }
 }
